--- a/benchmarks/hotrod-benchmark.yaml.j2
+++ b/benchmarks/hotrod-benchmark.yaml.j2
@@ -1,7 +1,7 @@
 name: hotrod-benchmark
 # Just connect to first server, it will give us the whole list
 hotrod:
-- uri: hotrod://{{ user }}:{{ pass }}@{{ groups['server'][0] }}:11222
+- uri: hotrod://{{ user }}:{{ pass }}@{{ groups['server'][0] }}:11222?connection_pool.max_active=2
   caches:
   - {{ cache_name }}
 # List of agents the Controller should deploy
@@ -12,46 +12,80 @@ agents:
     {% if ssh_key is defined -%}
     sshKey: "{{ ssh_key }}"
     {% endif -%}
-    extras: "{{ java_options | default(agent_java_args | default('')) }}"
+    extras: "{{ agent_java_args | default('') }}"
 {% endfor %}
+
 phases:
+- load:
+    atOnce:
+      users: 1
+      isWarmup: true
+      scenario:
+      - populate:
+        - loop:
+            counterVar: key
+            repeats: {{ (number_entries | int) }}
+            steps:
+              - randomUUID: cacheValue
+              - hotrodRequest:
+                  put: {{ cache_name }}
+                  key: key-${key}
+                  value: value-${cacheValue}
+
+{% if write_ratio | float > 0 %}
 - rampupPut:
     increasingRate:
-      duration: 10s
-      initialUsersPerSec: 1
-      targetUsersPerSec: 100
-      maxSessions: 100
+      startAfter: load
+      duration: 1m
+      initialUsersPerSec: {{ groups[hyperfoil_agent_group] | length }}
+      targetUsersPerSec: {{ ((write_ratio | float) * (req_per_sec | int) * groups[hyperfoil_agent_group] | length) | int }}
+      maxSessions: {{ ((write_ratio | float) * (req_per_sec | int) * groups[hyperfoil_agent_group] | length) | int }}
+      isWarmup: true
       scenario: &put
       - putData:
-        - randomInt: cacheKey <- 1 .. 4000
+        - randomInt: cacheKey <- 1 .. {{ (number_entries | int) }}
         - randomUUID: cacheValue
         - hotrodRequest:
             put: {{ cache_name }}
             key: key-${cacheKey}
             value: value-${cacheValue}
+{% endif %}
+
+{% if read_ratio | float > 0 %}
 - rampupGet:
     increasingRate:
-      duration: 10s
-      initialUsersPerSec: 2
-      targetUsersPerSec: 200
-      maxSessions: 200
+      startAfter: load
+      duration: 1m
+      initialUsersPerSec: {{ groups[hyperfoil_agent_group] | length }}
+      targetUsersPerSec: {{ ((read_ratio | float) * (req_per_sec | int) * groups[hyperfoil_agent_group] | length) | int }}
+      maxSessions: {{ ((read_ratio | float) * (req_per_sec | int) * groups[hyperfoil_agent_group] | length) | int }}
+      isWarmup: true
       scenario: &get
       - getData:
-        - randomInt: cacheKey <- 1 .. 4000
+        - randomInt: cacheKey <- 0 .. {{ (number_entries | int) }}
         - hotrodRequest:
             get: {{ cache_name }}
             key: key-${cacheKey}
-- doPut:
-    constantRate:
+{% endif %}
+
+{% if write_ratio | float > 0 %}
+- performWrites:
+    increasingRate:
       startAfter: rampupPut
-      duration: 2m
-      usersPerSec: 20
-      maxSessions: 10
+      duration: 4m
+      initialUsersPerSec: {{ groups[hyperfoil_agent_group] | length }}
+      targetUsersPerSec: {{ ((write_ratio | float) * (req_per_sec | int) * groups[hyperfoil_agent_group] | length) | int }}
+      maxSessions: {{ ((write_ratio | float) * 2 * (req_per_sec | int) * groups[hyperfoil_agent_group] | length) | int }}
       scenario: *put
-- doGet:
-    constantRate:
+{% endif %}
+
+{% if read_ratio | float > 0 %}
+- performReads:
+    increasingRate:
       startAfter: rampupGet
-      duration: 2m
-      usersPerSec: 160
-      maxSessions: 80
+      duration: 4m
+      initialUsersPerSec: {{ groups[hyperfoil_agent_group] | length }}
+      targetUsersPerSec: {{ ((read_ratio | float) * (req_per_sec | int) * groups[hyperfoil_agent_group] | length) | int }}
+      maxSessions: {{ ((read_ratio | float) * 2 * (req_per_sec | int) * groups[hyperfoil_agent_group] | length) | int }}
       scenario: *get
+{% endif %}
