--- a/benchmarks/rest-benchmark.yaml.j2
+++ b/benchmarks/rest-benchmark.yaml.j2
@@ -10,7 +10,7 @@ agents:
 {% for agent in groups[hyperfoil_agent_group] %}
   {{ agent }}:
     name: "{{ hostvars[agent]['inventory_hostname'] }}:{{ hyperfoil_agent_port }}"
-    extras: "{{ java_options | default(agent_java_args | default('')) }}"
+    extras: "{{ agent_java_args | default('') }}"
 {% endfor %}
 phases:
 - rampupPut:
